@@ -390,7 +390,6 @@ function unregister_AddToAny_widgets() {
 	}
 }
 add_action('widgets_init', 'unregister_AddToAny_widgets', 11);
-
 /**
  * Exclude URL access to bbpress module options
  * @author Nacho Abejaro
@@ -531,4 +530,160 @@ function get_category_image (){
     $image = $cat_meta ['image'];
 
     return $image;
+}
+
+/**
+ * Get pages available from email-subscribers plugin
+ * @author David Gras
+ */
+function get_submenu_items_emails_subscribers() {
+    return array(
+        0 => array('name' => __("Subscribers", 'email-subscribers'), 'link' => "admin.php?page=es-view-subscribers", "page" => "es-view-subscribers"),
+        1 => array('name' => __("Compose", 'email-subscribers'), 'link' => "admin.php?page=es-compose", "page" => "es-compose"),
+        2 => array('name' => __("Send Email", 'email-subscribers'), 'link' => "admin.php?page=es-sendemail", "page" => "es-sendemail"),
+        3 => array('name' => __("Notification", 'email-subscribers'), 'link' => "admin.php?page=es-notification", "page" => "es-notification"),
+        4 => array('name' => __("Cron Mail", 'email-subscribers'), 'link' => "admin.php?page=es-cron", "page" => "es-cron"),
+        5 => array('name' => __("Settings", 'email-subscribers'), 'link' => "admin.php?page=es-settings", "page" => "es-settings"),
+        6 => array('name' => __("Roles", 'email-subscribers'), 'link' => "admin.php?page=es-roles", "page" => "es-roles"),
+        7 => array('name' => __("Sent Mails", 'email-subscribers'), 'link' => "admin.php?page=es-sentmail", "page" => "es-sentmail"),
+        8 => array('name' => __("Help & Info", 'email-subscribers'), 'link' => "admin.php?page=es-general-information", "target" => "_blank", "page" => "es-general-information"),
+    );
+}
+
+/**
+ * Get pages available from email-subscribers plugin by user role
+ * @author David Gras
+ */
+function get_submenu_items_emails_subscribers_by_role()
+{
+    $pages = get_submenu_items_emails_subscribers();
+
+    if (!is_xtec_super_admin()) {
+
+        $pages_restricted = array(4, 5, 6);
+
+        foreach ($pages_restricted as $pages_restricted) {
+            if (isset($pages[$pages_restricted])) {
+                unset($pages[$pages_restricted]);
+            }
+        }
+
+        $pages[8]['link'] = 'http://agora.xtec.cat/moodle/moodle/mod/glossary/view.php?id=1741&mode=entry&hook=2501';
+    }
+
+    return $pages;
+}
+
+/**
+ * Removes pages available from email-subscribers plugin by user role
+ * @author David Gras
+ */
+function remove_submenu_items_emails_subscribers_by_role()
+{
+    if (!is_xtec_super_admin()) {
+
+        $pages = get_submenu_items_emails_subscribers();
+        $pages_restricted = array(4, 5, 6);
+
+        foreach ($pages_restricted as $pages_restricted) {
+            if (isset($pages[$pages_restricted])) {
+                remove_submenu_page('email-subscribers', $pages[$pages_restricted]['page']);
+            }
+        }
+    }
+}
+
+/**
+ * Render available pages from email-subscribers plugin by role
+ * @author David Gras
+ */
+function email_subscribers_options_page()
+{
+    $pagesEmailSubscribers = get_submenu_items_emails_subscribers_by_role();
+    ?>
+    <div class="wrap">
+        <div style="width:150px; padding:20px; float:left;">
+            <h3><?php _e('Options', 'email-subscribers'); ?></h3>
+            <?php foreach ($pagesEmailSubscribers as $pageEmailSubscribers) : ?>
+                <p>
+                    <a href="<?php echo $pageEmailSubscribers['link'] ?>"
+                        <?php echo isset($pageEmailSubscribers['target']) ? "target=" . $pageEmailSubscribers['target'] : ''; ?>
+                        >
+                        <?php echo __($pageEmailSubscribers['name'], 'email-subscribers'); ?>
+                    </a>
+                </p>
+            <?php endforeach; ?>
+        </div>
+    </div>
+    <?php
+}
+
+/**
+ * Build email_subscribers custom menu
+ * @author David Gras
+ */
+add_action('admin_menu', 'rebuild_email_subscribers_menus', 900);
+function rebuild_email_subscribers_menus()
+{
+    global $submenu;
+
+    if (isset($submenu['email-subscribers'])) {
+        add_options_page(__('Email subscribers', 'email-subscribers'), __('Email subscribers', 'email-subscribers'), 'manage_options', 'email-subscribers', 'email_subscribers_options_page', '', 10);
+        remove_menu_page('email-subscribers');
+        remove_submenu_items_emails_subscribers_by_role();
+    }
+}
+
+/**
+ * Displays the option-general menu when you are browsing a page of  email-subscribers  plugin
+ * @author David Gras
+ */
+
+add_action('contextual_help', 'check_page_from_emails_subscribers_available_by_role', 999);
+function check_page_from_emails_subscribers_available_by_role()
+{
+
+    if (has_page_from_emails_subscribers_available_by_role()) {
+        echo "<script type='text/javascript'>\n";
+        echo "
+                jQuery(function() {
+                      var menuSeetings = jQuery('#menu-settings'),
+                      emaiSubscribers = menuSeetings.find( \"a[href='options-general.php?page=email-subscribers']\"),
+                      itemEmaiSubscribers = emaiSubscribers.parent('li');
+
+                      menuSeetings.removeAttr('class');
+                      menuSeetings.addClass('wp-has-submenu wp-has-current-submenu wp-menu-open menu-top menu-icon-settings menu-top-last menu-top-last menu-top-last');
+                      itemEmaiSubscribers.addClass('current');
+                });
+            ";
+        echo "</script>\n";
+    }
+}
+
+/**
+ * Returns if there is a page from plugin emails subscribers and it is available by role
+ * @author David Gras
+ */
+function has_page_from_emails_subscribers_available_by_role()
+{
+    global $submenu;
+    $is_page_from_emails_subscribers = false;
+
+    if (isset($submenu['email-subscribers'])) {
+        $current_Screen = get_current_screen();
+        $pos = strpos($current_Screen ->id, '_page_');
+
+        if ($pos !== false) {
+            $page = substr($current_Screen ->id, $pos +  strlen('_page_'));
+            $pagesEmailSubscribers = get_submenu_items_emails_subscribers();
+
+            foreach ($pagesEmailSubscribers as $pageEmailSubscribers) {
+                if (strcmp($pageEmailSubscribers['page'], $page) === 0) {
+                    $is_page_from_emails_subscribers = true;
+                }
+            }
+        }
+    }
+
+    return $is_page_from_emails_subscribers;
 }
